styles.css
body {
  background-color: #EFEFEF;
  margin: 0px;
  padding: 0px;
}

.nav {
  padding-left: 15%;
  container-type: inline-size;
  display: flex;
  position: fixed;
  z-index:100;
  column-gap: 2em;
  align-items: center;
  width: 100%;
  height: 58px;
  background-color: #2D3F54;
  padding-bottom: 5px;
}

.nav-title {
  color: #FF8F5C;
  font-size: 28px;
  font-weight: bold;
  align-self: center;
}

.nav-button {
  color: #EFEFEF;
  text-decoration: none;
  align-self: center;
  font-size: 20px;
}

.nav-button:hover {
  color: #FF8F5C;
  text-decoration: underline;
  font-size: 20px;
}

.nav-menu-buttons{
  column-gap: 1.5em;
  display: flex;
  align-self: center;
}

.nav-menu-short {
  content-visibility: hidden;
}

.head-img {
  width: 100%;
}

.head-desc {
  padding-left: 20%;
  padding-right: 20%;
  padding-top: 20px;
}

.desc-text {
  color: #2D3F54;
  font-family: Georgia, serif;
  font-size: 16px;
}

.footer {
  background-color: #2D3F54;
  padding: 20px;
}

.h1-blue {
  color: #2D3F54;
}

.footer-links {
  container-type: inline-size;
  display: flex;
  column-gap: 2em;
  align-items: center;
  width: 100%;
  background-color: #2D3F54;
  padding-bottom: 5px;
  padding-left: 20%;
  padding-right: 20%;
}

.footer-entry {
  column-gap: 1.5em;
  font-size: 16px;
}

.footer-button {
  color: #EFEFEF;
  align-self: center;
}

.footer-button:hover {
  color: #FF8F5C;
  text-decoration: underline;
}

@container (max-width: 500px) {
  .nav-menu-buttons {
    content-visibility: hidden;
  }
  .nav-menu-short {
    content-visibility: visible;
  }
}

